--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Roboto","Helvetica Neue", "Arial", sans-serif;
+  
+}
+ .bgc{
+  background-color: #e0e0e0
+  ;
+}
+.dark .bgc{
+  background-color: #424242
+}
+.border{
+  border: 5px solid red;
+}
+.mycolor{
+  background-color: yellow;
+
+}
+.dark .mycolor{
+  background-color: red;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@media (max-width: 900px) {
+.menud{
+  position: fixed;
+  background-color: #424242;
+  top: 60px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 5;
+  width: 100px;
+}
+
+
+
+
 }
